api/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: api-ingress
spec:
  rules:
  - host: git-ops.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-gitops-api-service
            port: 
              number: 80
